Fixed spelling errors

--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="slideText">
                     <h1>Sony PS4 Pro</h1>
-                    <p>With the ability to output at a 4k resolution and increased processing poower
+                    <p>With the ability to output at a 4k resolution and increased processing power
                         the PS4 pro is one of the best home consoles money can buy.
                         <br><br>
                         Get yours today and recieve a free game from our selection!
