Quality of life improvements

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             <img src="img/Menu Icon.png">
         </a>
     </div>
-    <div class="content">
+     <main>
         <div class="title">
             <h1>Featured Products</h1>
         </div>
@@ -51,7 +51,7 @@
             </div>
             <div class="slideTxtContainer">
                 <div class="slideText">
-                    <h1>New Nintendo 2DS XL</h1>
+                    <h2>New Nintendo 2DS XL</h2>
                     <p>We now have new stock of the popular New 2DS XL console by nintendo,
                         this console is great for kids and adults alike and would make a great gift.
                         <br><br>
@@ -59,14 +59,14 @@
                     </p>
                 </div>
                 <div class="slideText">
-                    <h1>HP Laptops</h1>
+                    <h2>HP Laptops</h2>
                     <p>We now have a site-wide sale on all HP brand laptops with savings of up to £100.
                         <br><br>
                         In combination with free shipping on all orders over £50 you can grab some huge savings, get yours today!
                     </p>
                 </div>
                 <div class="slideText">
-                    <h1>Sony PS4 Pro</h1>
+                    <h2>Sony PS4 Pro</h2>
                     <p>With the ability to output at a 4k resolution and increased processing power
                         the PS4 pro is one of the best home consoles money can buy.
                         <br><br>
@@ -74,7 +74,7 @@
                     </p>
                 </div>
                 <div class="slideText">
-                    <h1>Raspberry Pi</h1>
+                    <h2>Raspberry Pi</h2>
                     <p>When we think of programming, we think of this lovely machine, you can do so much with this
                         affordable peice of kit that the sky is the limit!
                         <br><br>
@@ -82,7 +82,7 @@
                     </p>
                 </div>
                 <div class="slideText">
-                    <h1>Soldering Iron</h1>
+                    <h2>Soldering Iron</h2>
                     <p>A soldering iron is one of the most useful tools and electronics engineer can have
                         with so many applications in curcuitry from replacing battery sockets to fixing
                         motherboards.
@@ -96,6 +96,13 @@
             </div>
             <div class="fullWidthBg"></div>
         </div>
-    </div>
+        <div class="mainText">
+            <h1>Order Help</h1>
+            <p>To order, simply head over to our "Order Form" page from the navigation bar
+                or click the "Buy It Now" button shown under the product to be taken there
+                automatically.
+            </p>
+        </div>
+    </main>
     <script src="js/rffunctions.js"></script>
 </body>
