Added copyright statement, changed some styling

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
             <img src="img/Menu Icon.png">
         </a>
     </div>
-     <main>
+    <div class="content">
         <div class="title">
             <h1>Featured Products</h1>
         </div>
@@ -99,10 +99,21 @@
         <div class="mainText">
             <h1>Order Help</h1>
             <p>To order, simply head over to our "Order Form" page from the navigation bar
-                or click the "Buy It Now" button shown under the product to be taken there
-                automatically.
+                    or click the "Buy It Now" button shown under the product to be taken there
+                    automatically.
             </p>
         </div>
-    </main>
+        <div class="mainText">
+            <h1>Test</h1>
+            <p>To order, simply head over to our "Order Form" page from the navigation bar
+                    or click the "Buy It Now" button shown under the product to be taken there
+                    automatically.
+            </p>
+        </div>
+        <div class="footFix"><!--Forces the footer to stay beneath for responsiveness due to styling--></div>
+        <div class="footer">
+            <h3>Website by Ross Fitch. Copyright © 2019, All rights reserved.</h3>
+        </div>
+    </div>
     <script src="js/rffunctions.js"></script>
 </body>
