--- a/Index.html
+++ b/Index.html
@@ -96,21 +96,21 @@
             </div>
             <div class="fullWidthBg"></div>
         </div>
-        <div class="mainText">
-            <h1>Order Help</h1>
-            <p>To order, simply head over to our "Order Form" page from the navigation bar
-                    or click the "Buy It Now" button shown under the product to be taken there
-                    automatically.
-            </p>
+        <div class="mainTextContainer">
+            <div class="mainText">
+                <h1>Order Help</h1>
+                <p>To order, simply head over to our "Order Form" page from the navigation bar
+                        or click the "Buy It Now" button shown under the product to be taken there
+                        automatically.
+                </p>
+            </div>
+            <div class="mainText">
+                <h1>Our Goal</h1>
+                <p>Our goal is to supply you with the latest and greatest electronics, from
+                        consoles to circuitry, we have you covered.
+                </p>
+            </div>
         </div>
-        <div class="mainText">
-            <h1>Test</h1>
-            <p>To order, simply head over to our "Order Form" page from the navigation bar
-                    or click the "Buy It Now" button shown under the product to be taken there
-                    automatically.
-            </p>
-        </div>
-        <div class="footFix"><!--Forces the footer to stay beneath for responsiveness due to styling--></div>
         <div class="footer">
             <h3>Website by Ross Fitch. Copyright © 2019, All rights reserved.</h3>
         </div>
