Added IE/Edge support

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
         <div class="title">
             <h1>Featured Products</h1>
         </div>
-        <div class="slideshow">
+        <div class="slideShow">
             <div class="slideImgContainer">
                 <div class="slides fade-in-transition">
                     <img src="img/slideImg1.png">
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="footer">
-            <h3>Website by Ross Fitch. Copyright © 2019, All rights reserved.</h3>
+            <h3>Website by Ross Fitch. Copyright &#9400; 2019, All rights reserved.</h3>
         </div>
     </div>
     <script src="js/rffunctions.js"></script>
