Fixed ugly copyright logo

--- a/Index.html
+++ b/Index.html
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="footer">
-            <h3>Website by Ross Fitch. Copyright &#9400; 2019, All rights reserved.</h3>
+            <h3>Website by Ross Fitch. Copyright &copy; 2019, All rights reserved.</h3>
         </div>
     </div>
     <script src="js/rffunctions.js"></script>
