--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,5 @@
 <head>
+    <title>East Midlands Electronics Home</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
 </head>
@@ -9,7 +10,7 @@
             <div class="innerNav">
                 <a href="#home">Home</a>
                 <a href="#xml">XML Page</a>
-                <a href="#order">Order Form</a> 
+                <a href="./Order.html">Order Form</a> 
                 <a href="#slideshow">Slide Show</a> 
                 <a href="#report">Report</a>
             </div>
