--- a/Order.html
+++ b/Order.html
@@ -24,7 +24,7 @@
         <div class="mainTextContainer">
             <div class="mainText">
                 <h1>Registration</h1>
-                <form class="formContainer">
+                <form class="formContainer" action="?" method="POST">
                     <label for="firstName"><h1>First Name</h1></label>
                     <input class="form" type="text" placeholder="First Name" name="firstName" required>
 
@@ -43,7 +43,7 @@
                     <div class="submitcontainer">
                         <div class="g-recaptcha" data-sitekey="6Lc1KssUAAAAAP4MZBgFOa8O8zw83w1vy3KrtqG-"></div>
 
-                        <button type="submit" class="submitBtn" onclick="checkValidation();">Register</button>
+                        <button type="submit" value="Submit" class="submitBtn" onclick="checkValidation();">Register</button>
                     </div>
                 </form>
             </div>
