--- a/Order.html
+++ b/Order.html
@@ -40,7 +40,11 @@
                     <label for="passwordRepeat"><h1>Repeat Password</h1></label>
                     <input id="confirmPassword" class="form" type="password" placeholder="Repeat Password" name="passwordRepeat" required>
 
-                    <button type="submit" class="g-recaptcha submitBtn" data-sitekey="6Lc1KssUAAAAAP4MZBgFOa8O8zw83w1vy3KrtqG-" data-callback='onSubmit' onclick="checkValidation();">Register</button>
+                    <div class="submitcontainer">
+                        <div class="g-recaptcha" data-sitekey="6Lc1KssUAAAAAP4MZBgFOa8O8zw83w1vy3KrtqG-"></div>
+
+                        <button type="submit" class="submitBtn" onclick="checkValidation();">Register</button>
+                    </div>
                 </form>
             </div>
             <div class="mainText">
