--- a/Order.html
+++ b/Order.html
@@ -41,7 +41,7 @@
                     <input id="confirmPassword" class="form" type="password" placeholder="Repeat Password" name="passwordRepeat" required>
 
                     <div class="submitcontainer">
-                        <div class="g-recaptcha" data-sitekey="6Lc1KssUAAAAAP4MZBgFOa8O8zw83w1vy3KrtqG-"></div>
+                        <div class="g-recaptcha" data-sitekey="6Lc1KssUAAAAAP4MZBgFOa8O8zw83w1vy3KrtqG-"  data-callback="onSubmit"></div>
 
                         <button type="submit" class="submitBtn" onclick="checkValidation();">Register</button>
                     </div>
