One step forward... Another...

--- a/Order.html
+++ b/Order.html
@@ -43,7 +43,7 @@
                     <div class="submitcontainer">
                         <div class="g-recaptcha" data-sitekey="6Lc1KssUAAAAAP4MZBgFOa8O8zw83w1vy3KrtqG-"  data-callback="onSubmit"></div>
 
-                        <button type="submit" class="submitBtn" onclick="checkValidation();">Register</button>
+                        <button type="submit" class="submitBtn" onclick="submitUserForm();">Register</button>
                     </div>
                 </form>
             </div>
