--- a/Order.html
+++ b/Order.html
@@ -24,7 +24,7 @@
         <div class="mainTextContainer">
             <div class="mainText">
                 <h1>Registration</h1>
-                <form class="formContainer">
+                <form class="formContainer" id="rfform">
                     <label for="firstName"><h1>First Name</h1></label>
                     <input class="form" type="text" placeholder="First Name" name="firstName" required>
 
