--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
         <div class="navstyle">
             <img src="img/EME Logo.png">
             <div class="innerNav">
-                <a href="#home">Home</a>
-                <a href="#xml">XML Page</a>
+                <a href="./Index.html">Home</a>
+                <a href="./Products.html">XML Page</a>
                 <a href="./Order.html">Order Form</a> 
                 <a href="#slideshow">Slide Show</a> 
                 <a href="#report">Report</a>
@@ -117,5 +117,4 @@
         </div>
     </div>
     <script src="js/rffunctions.js"></script>
-    <script src="js/rfparser.js"></script>
 </body>
