--- a/Order.html
+++ b/Order.html
@@ -10,8 +10,8 @@
             <img src="img/EME Logo.png">
             <div class="innerNav">
                 <a href="./Index.html">Home</a>
-                <a href="#xml">XML Page</a>
-                <a href="#order">Order Form</a> 
+                <a href="./Products.html">XML Page</a>
+                <a href="./Order.html">Order Form</a> 
                 <a href="#slideshow">Slide Show</a> 
                 <a href="#report">Report</a>
             </div>
