--- a/Products.html
+++ b/Products.html
@@ -10,7 +10,7 @@
             <img src="img/EME Logo.png">
             <div class="innerNav">
                 <a href="./Index.html">Home</a>
-                <a href="./products.html">XML Page</a>
+                <a href="./Products.html">XML Page</a>
                 <a href="./Order.html">Order Form</a> 
                 <a href="#slideshow">Slide Show</a> 
                 <a href="#report">Report</a>
