--- a/Products.html
+++ b/Products.html
@@ -22,11 +22,11 @@
     </div>
     <div class="content">
         <div class="mainTextContainer">
-            <div id="product" class="mainText">
-
+            <div class="mainText">
+                <h1 class="prodName"></h1>
             </div>
-            <div id="product" class="mainText">
-  
+            <div class="mainText">
+                <h1 class="prodName"></h1>
             </div>
         </div>
         <div class="footer">
