Changed file structure

--- a/Products.html
+++ b/Products.html
@@ -34,5 +34,5 @@
         </div>
     </div>
     <script src="js/rffunctions.js"></script>
-    <script src="xml/rfparser.js"></script>
+    <script src="js/rfparser.js"></script>
 </body>
