Fixed timed slide error

--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
 </head>
-<body>
+<body onload="timedSlide()">
     <div class="navbar" id="responsive">
         <div class="navstyle">
             <img src="img/EME Logo.png">
