--- a/Products.html
+++ b/Products.html
@@ -1,5 +1,5 @@
 <head>
-    <title>East Midlands Electronics Forms</title>
+    <title>East Midlands Electronics Products</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
