--- a/Products.html
+++ b/Products.html
@@ -21,14 +21,7 @@
         </a>
     </div>
     <div class="content">
-        <div class="mainTextContainer">
-            <div class="mainText">
-                <h1 class="prodName" id="test"></h1>
-            </div>
-            <div class="mainText">
-                <h1 class="prodName"></h1>
-            </div>
-        </div>
+        <div class="mainTextContainer" id="productList"></div>
         <div class="footer">
             <h3>Website by Ross Fitch. Copyright &copy; 2019, All rights reserved.</h3>
         </div>
