--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
         </a>
     </div>
     <div class="content">
-        <div class="title">
+        <div class="header">
             <h1>Featured Products</h1>
         </div>
         <div class="slideShow">
