--- a/Products.html
+++ b/Products.html
@@ -20,11 +20,8 @@
             <img src="img/Menu Icon.png">
         </a>
     </div>
-    <div class="content">
-        <div class="mainTextContainer" id="productList"></div>
-        <div class="footer">
-            <h3>Website by Ross Fitch. Copyright &copy; 2019, All rights reserved.</h3>
-        </div>
+    <div class="content" id="productList">
+
     </div>
     <script src="js/rffunctions.js"></script>
     <script src="js/rfparser.js"></script>
