--- a/Order.html
+++ b/Order.html
@@ -63,7 +63,7 @@
                     <input class="form" type="text" placeholder="House Number | Street | Postcode" name="address" required>
 
                     <label for="telephone"><h1>Telephone</h1></label>
-                    <input class="form" type="tel" placeholder="Telephone Number" name="telephone" required>
+                    <input class="form" type="tel" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" name="telephone" required>
 
                     <div class="submitcontainer">
                         <button type="submit" class="submitBtn" id="last" onclick="checkAcc()">Place Order</button>
