--- a/Products.html
+++ b/Products.html
@@ -2,7 +2,12 @@
     <title>East Midlands Electronics Products</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script>
+        if('ActiveXObject' in window) {
+            alert("Sorry, you're running a very outdated which doesnt fully support JS/XML please try using a newer browser to view this site!");
+        }
+    </script>
+
 </head>
 <body>
     <div class="navbar" id="responsive">
