--- a/Products.html
+++ b/Products.html
@@ -1,13 +1,8 @@
 <head>
     <title>East Midlands Electronics Products</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=10" />
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
-    <script>
-        if('ActiveXObject' in window) {
-            alert("Sorry, you're running a very outdated which doesnt fully support JS/XML please try using a newer browser to view this site!");
-        }
-    </script>
-
 </head>
 <body>
     <div class="navbar" id="responsive">
