--- a/Products.html
+++ b/Products.html
@@ -25,4 +25,5 @@
     </div>
     <script src="js/rffunctions.js"></script>
     <script src="js/rfparser.js"></script>
+    <script src="wgxpath.install.js"></script>
 </body>
