--- a/Order.html
+++ b/Order.html
@@ -60,7 +60,7 @@
                     <input class="form" type="text" placeholder="Product Name" name="product" required>
 
                     <label for="address"><h1>Address</h1></label>
-                    <input class="form" type="text" placeholder="House Number, Street, Postcode" pattern="[A-z0-9]+,[A-z0-9]+,[A-z0-9]" name="address" required>
+                    <input class="form" type="text" placeholder="House Number, Street, Postcode" pattern="[0-9]+,[A-z]+,[A-z0-9]" name="address" required>
 
                     <label for="telephone"><h1>Telephone</h1></label>
                     <input class="form" type="tel" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" name="telephone" required>
