--- a/Order.html
+++ b/Order.html
@@ -49,7 +49,7 @@
             </div>
             <div class="mainText">
                 <h1>Order Form</h1>
-                <form class="formContainer" onload="setValidationMsg()">
+                <form class="formContainer" onload="setValidation()">
                     <label for="email"><h1>Email</h1></label>
                     <input id="email" class="form" type="email" placeholder="Your Email" name="email" required>
 
