--- a/Order.html
+++ b/Order.html
@@ -74,5 +74,6 @@
             <h3>Website by Ross Fitch. Copyright &copy; 2019, All rights reserved.</h3>
         </div>
     </div>
+    <script src="js/rfparser.js"></script>
     <script src="js/rffunctions.js"></script>
 </body>
