--- a/Products.html
+++ b/Products.html
@@ -1,6 +1,5 @@
 <head>
     <title>East Midlands Electronics Products</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=10"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
 </head>
@@ -23,7 +22,7 @@
     <div class="content" id="productList">
 
     </div>
-    <script src="js/rffunctions.js" async="true"></script>
+    <script src="js/rffunctions.js"></script>
     <script src="google/wgxpath.install.js"></script>
     <script src="js/rfparser.js"></script>
 </body>
