--- a/Products.html
+++ b/Products.html
@@ -22,6 +22,7 @@
     <div class="content" id="productList">
 
     </div>
-    <script src="js/rffunctions.js"></script>
-
+    <script src="js/rffunctions.js" async defer></script>
+    <script src="google/wgxpath.install.js"></script>
+    <script src="js/rfparser.js"></script>
 </body>
