--- a/Products.html
+++ b/Products.html
@@ -1,5 +1,6 @@
 <head>
     <title>East Midlands Electronics Products</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=10"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="css/rfstyle.css">
 </head>
