--- a/Products.html
+++ b/Products.html
@@ -22,7 +22,7 @@
     <div class="content" id="productList">
 
     </div>
-    <script src="js/wgxpath.install.js"></script>
+    <script src="google/wgxpath.install.js"></script>
     <script src="js/rffunctions.js"></script>
     <script src="js/rfparser.js"></script>
 </body>
