--- a/Order.html
+++ b/Order.html
@@ -60,7 +60,7 @@
                     <input class="form" type="text" placeholder="Product Name" name="product" required>
 
                     <label for="address"><h1>Address</h1></label>
-                    <input class="form" type="text" placeholder="1 Placeholder St AB1 1AA" pattern="\d{1,5}\s[ a-zA-Z]{0,20}\s[ A-Z0-9]{1,9}" name="address" oninput="setCustomValidity('')" oninvalid="setCustomValidity('Invalid address or format (Number Street Postcode)')" required>
+                    <input class="form" type="text" placeholder="1 Placeholder St NG134HA" pattern="\d{1,5}\s[ a-zA-Z]{0,20}\s[ A-Z0-9]{1,9}" name="address" oninput="setCustomValidity('')" oninvalid="setCustomValidity('Invalid address or format (Number Street Postcode)')" required>
 
                     <label for="telephone"><h1>Telephone</h1></label>
                     <input class="form" type="tel" placeholder="07123456789" pattern="[0-9]{9,11}" name="telephone" oninput="setCustomValidity('')" oninvalid="setCustomValidity('Invalid telephone number')" required>
