--- a/Order.html
+++ b/Order.html
@@ -75,4 +75,6 @@
         </div>
     </div>
     <script src="js/rffunctions.js"></script>
+    <script src="google/wgxpath.install.js"></script>
+    <script src="js/rfparser.js"></script>
 </body>
