--- a/Order.html
+++ b/Order.html
@@ -68,6 +68,7 @@
                     <div class="submitcontainer">
                         <button type="submit" class="submitBtn" id="last" onclick="checkAcc()">Place Order</button>
                     </div>
+                </form>
             </div>
         </div>
         <div class="footer">
