--- a/Order.html
+++ b/Order.html
@@ -13,7 +13,7 @@
                 <a href="./Products.html">XML Page</a>
                 <a href="./Order.html">Order Form</a> 
                 <a href="#slideshow">Slide Show</a> 
-                <a href="#report">Report</a>
+                <a href="./Report.html">Report</a>
             </div>
         </div>
         <a href="javascript:void(0);" class="resIcon" onclick="toggleMobile()">
